src/test/resources/rules/success/WhitespaceAround.java
package rules.success;

public class WhitespaceAround {
    public void method() {
        Integer x = 5;
        x.byteValue();
    }
}
